--- a/main.html
+++ b/main.html
@@ -1,31 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>Optimization Example</title>
+  <title>Code Optimization</title>
 </head>
 <body>
-
-  <!-- ✅ Navbar -->
-  <nav>
-    <ul>
-      <li><a href="home.html">Home</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-  </nav>
-
-  <!-- ✅ Paragraph -->
-  <p>
-    We can optimize a solution using both time and space optimization. To optimize a program,
-  </p>
-
-  <!-- ✅ Ordered List -->
-  <ol>
-    <li>We can reduce the time taken to run the program and increase the space occupied</li>
-    <li>We can reduce the memory usage of the program and increase it's total run time</li>
-    <li>We can reduce both time and space complexity by deploying relevant algorithms</li>
-  </ol>
-
+<p>
+	We can optimize a solution using both time and space optimization. To optimize a program,
+</p>
+	<ol>
+		<li>We can reduce the time taken to run the program and increase the space occupied</li>
+        <li>We can reduce the memory usage of the program and increase it's total run time</li>
+		<li>We can reduce both time and space complexity by deploying relevant algorithms</li>
+	</ol>
+  
 </body>
 </html>
